--- a/metadata/service/support.yml
+++ b/metadata/service/support.yml
@@ -8,6 +8,6 @@ parameters:
       sensu:
         enabled: false
       sphinx:
-        enabled: true
+        enabled: false
       config:
         enabled: true
