--- a/designate/files/ocata/pools.yaml
+++ b/designate/files/ocata/pools.yaml
@@ -55,6 +55,8 @@
         rndc_host: {{ target.options.rndc_host }}
         rndc_port: {{ target.options.rndc_port }}
         rndc_key_file: {{ target.options.rndc_key_file }}
+        {%- elif target.type == 'powerdns' %}
+        connection: {{ target.options.connection }}
         {%- endif %}
     {% endfor -%}
 
