Change pdns backend settings
pdns4 does not use connection anymore, instead
it uses api_token/api_endpoint settings.

Related PROD: 11411

Change-Id: Id73e4bcea327335c7db3900de03ae9689ca0511a

--- a/designate/files/mitaka/pools.yaml
+++ b/designate/files/mitaka/pools.yaml
@@ -55,8 +55,9 @@
         rndc_host: {{ target.options.rndc_host }}
         rndc_port: {{ target.options.rndc_port }}
         rndc_key_file: {{ target.options.rndc_key_file }}
-        {%- elif target.type == 'powerdns' %}
-        connection: {{ target.options.connection }}
+        {%- elif target.type == 'pdns4' %}
+        api_endpoint: {{ target.options.api_endpoint }}
+        api_token: {{ target.options.api_token }}
         {%- endif %}
     {% endfor -%}
 
