Fix sphinx doc rendering
'value' must not be nested to avoid such error:

Unable to manage file: Jinja variable 'salt.utils.odict.OrderedDict object' has no attribute 'value'

Change-Id: I40006000eb173a72739be3bfb516fc2468f32f7f

--- a/designate/meta/sphinx.yml
+++ b/designate/meta/sphinx.yml
@@ -16,8 +16,8 @@ doc:
           name: "UUID of managed DNS zone"
           value: {{ server.domain_id }}
         bind:
-          api:
-            value: {{ server.bind.api.address }}
+          name: "Bind API address"
+          value: {{ server.bind.api.address }}
         version:
           name: "Version"
           value: {{ server.version }}
